--- a/css/main.css
+++ b/css/main.css
@@ -8,25 +8,27 @@
   transform: translateY(-10px);
 }
 
-#bear:hover #left-eye,
-#bear:hover #right-eye {
+#left-eye,
+#right-eye {
   animation: glancing 3s infinite forwards;
 }
 
 @keyframes glancing {
+
   0% {
-    transform: translatex(0)
+    transform: translateX(0);
   }
 
   40% {
-    transform: translateX(-4px)
+    transform: translateX(-4px);
   }
 
   80% {
-    transform: translateX(4px)
+    transform: translateX(4px);
   }
 
   100% {
-    transform: translateX(0)
+    transform: translateX(0);
   }
+
 }
